Upgrade Solr 8.11.4 to Solr 10.0.0
- Migrate all solrconfig.xml files for Solr 10 compatibility
- Update Solr Docker image to Solr 10
- Migrate SolrServiceImpl, SolrLoggerServiceImpl, SolrAuthority,
  AuditSolrServiceImpl, SolrSuggestionStorageServiceImpl to Solr 10 API
- Update MockSolrServer for embedded Solr 10 testing
- Update SolrSearchCore and SolrImportExport for new API