@@ -31,12 +31,11 @@ import java.util.UUID;
 import jakarta.mail.MessagingException;
 import org.apache.commons.collections4.CollectionUtils;
 import org.apache.commons.collections4.MapUtils;
-import org.apache.commons.collections4.Transformer;
 import org.apache.commons.lang3.StringUtils;
 import org.apache.commons.lang3.Strings;
 import org.apache.logging.log4j.Logger;
-import org.apache.solr.client.solrj.SolrQuery;
 import org.apache.solr.client.solrj.SolrServerException;
+import org.apache.solr.client.solrj.request.SolrQuery;
 import org.apache.solr.client.solrj.response.FacetField;
 import org.apache.solr.client.solrj.response.QueryResponse;
 import org.apache.solr.client.solrj.response.json.BucketBasedJsonFacet;
@@ -582,8 +581,8 @@ public class SolrServiceImpl implements SearchService, IndexingService {
             Object value = doc.getFieldValue(SearchUtils.LAST_INDEXED_FIELD);
 
             // If it's a java.util.Date, convert to an Instant
-            if (value instanceof java.util.Date) {
-                value = ((java.util.Date) value).toInstant();
+            if (value instanceof java.util.Date date) {
+                value = date.toInstant();
             }
 
             if (value instanceof Instant lastIndexed) {
@@ -1108,7 +1107,7 @@ public class SolrServiceImpl implements SearchService, IndexingService {
             for (String facetName : response.getBucketBasedFacetNames()) {
                 BucketBasedJsonFacet facet = response.getBucketBasedFacets(facetName);
                 if (facet != null) {
-                    result.setTotalEntries(facet.getNumBucketsCount());
+                    result.setTotalEntries(facet.getNumBuckets());
                     for (BucketJsonFacet bucket : facet.getBuckets()) {
                         String facetValue = bucket.getVal() != null ? bucket.getVal().toString() : "";
                         String field = facetName + "_filter";
@@ -1150,11 +1149,7 @@ public class SolrServiceImpl implements SearchService, IndexingService {
                         for (FacetField.Count facetValue : facetValues) {
                             String displayedValue = transformDisplayedValue(context, facetField.getName(),
                                                                             facetValue.getName());
-
                             String field = transformFacetField(facetFieldConfig, facetField.getName(), true);
-                            String currentLocalePrefix = context.getCurrentLocale().getLanguage() + "_";
-                            field = StringUtils.removeStart(field, currentLocalePrefix);
-
                             String authorityValue = transformAuthorityValue(context, facetField.getName(),
                                                                             facetValue.getName());
                             String sortValue = transformSortValue(context,
@@ -1233,7 +1228,7 @@ public class SolrServiceImpl implements SearchService, IndexingService {
                 getIndexFactoryByType(type);
         Optional<IndexableObject> indexableObject = indexableObjectService.findIndexableObject(context, id);
 
-        if (!indexableObject.isPresent()) {
+        if (indexableObject.isEmpty()) {
             log.warn("Not able to retrieve object RESOURCE_ID:" + id + " - RESOURCE_TYPE_ID:" + type);
         }
         return indexableObject.orElse(null);
@@ -1325,7 +1320,7 @@ public class SolrServiceImpl implements SearchService, IndexingService {
                     if (value.matches("\\[\\d{1,4} TO \\d{1,4}\\]")) {
                         int minRange = Integer.parseInt(value.substring(1, value.length() - 1).split(" TO ")[0]);
                         int maxRange = Integer.parseInt(value.substring(1, value.length() - 1).split(" TO ")[1]);
-                        value = "[" + String.format("%04d", minRange) + " TO " + String.format("%04d", maxRange) + "]";
+                        value = "[" + "%04d".formatted(minRange) + " TO " + "%04d".formatted(maxRange) + "]";
                     }
                     filterQuery.append(value);
                 }
@@ -1358,15 +1353,9 @@ public class SolrServiceImpl implements SearchService, IndexingService {
             //Add the more like this parameters !
             solrQuery.setParam(MoreLikeThisParams.MLT, true);
             //Add a comma separated list of the similar fields
-            @SuppressWarnings("unchecked")
             java.util.Collection<String> similarityMetadataFields = CollectionUtils
-                .collect(mltConfig.getSimilarityMetadataFields(), new Transformer() {
-                    @Override
-                    public Object transform(Object input) {
-                        //Add the mlt appendix !
-                        return input + "_mlt";
-                    }
-                });
+                .collect(mltConfig.getSimilarityMetadataFields(),
+                         input -> input + "_mlt");
 
             solrQuery.setParam(MoreLikeThisParams.SIMILARITY_FIELDS, StringUtils.join(similarityMetadataFields, ','));
             solrQuery.setParam(MoreLikeThisParams.MIN_TERM_FREQ, String.valueOf(mltConfig.getMinTermFrequency()));
@@ -1383,8 +1372,8 @@ public class SolrServiceImpl implements SearchService, IndexingService {
                 for (Object relatedDoc : relatedDocs) {
                     SolrDocument relatedDocument = (SolrDocument) relatedDoc;
                     IndexableObject relatedItem = findIndexableObject(context, relatedDocument);
-                    if (relatedItem instanceof IndexableItem) {
-                        results.add(((IndexableItem) relatedItem).getIndexedObject());
+                    if (relatedItem instanceof IndexableItem indexableItem) {
+                        results.add(indexableItem.getIndexedObject());
                     }
                 }
             }
@@ -1612,27 +1601,6 @@ public class SolrServiceImpl implements SearchService, IndexingService {
         return ClientUtils.escapeQueryChars(query);
     }
 
-    /**
-     * Utility method to format an autocomplete query over a specific field. Combines the escaped query with a
-     * wildcard search over the specified {@code autocompleteField}. This field is typically non-tokenized and
-     * allows recovering searches containing spaces as a single value.
-     *
-     * @param query the user input to search for
-     * @param autocompleteField non-tokenized field used for wildcard autocomplete
-     * @return the constructed Solr query, or the original query if blank
-     */
-    @Override
-    public String formatAutoCompleteQuery(String query, String autocompleteField) {
-        if (StringUtils.isNotBlank(query)) {
-            StringBuilder buildQuery = new StringBuilder();
-            String escapedQuery = escapeQueryChars(query);
-            buildQuery.append("(").append(escapedQuery).append(" OR ").append(autocompleteField).append(":*")
-                .append(escapedQuery).append("*").append(")");
-            return buildQuery.toString();
-        }
-        return query;
-    }
-
     @Override
     public FacetYearRange getFacetYearRange(Context context, IndexableObject scope,
                                             DiscoverySearchFilterFacet facet, List<String> filterQueries,
@@ -1665,11 +1633,6 @@ public class SolrServiceImpl implements SearchService, IndexingService {
             }
         }
         return null;
-    }
-
-    @Override
-    public SolrSearchCore getSolrSearchCore() {
-        return solrSearchCore;
     }
 
 }
